app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
// endbower
body {
    padding: 0;
}

.header,
.marketing,
.footer {
    padding-left: 15px;
    padding-right: 15px;
}

.header {
    h3 {
        margin-top: 0;
        margin-bottom: 0;
        line-height: 40px;
        padding-bottom: 19px;
    }
}

.navbar.navbar-subnav {
    top: 50px;
}

.with-subnav {
    margin-top: 110px;
}

.show-more-less-btn {
    position: absolute;
    top: 33px;
    right: 17px;
}

.diff {
    width: 100%;
    height: calc(100vh - 100px);
    overflow: hidden;
    display: flex;
    .opts {
        position: fixed;
        display: flex;
        top: 0;
        left: 40%;
        z-index: 2;
    }
    .column {
        padding: 10px;
        overflow-y: scroll;
        overflow-x: auto;
        font-family: monospace;
        position: relative;
        line-height: 16px;
    }
    .left {
        flex: 45;
        background: rgba(#eee, 0.25);
        z-index: 2;
        direction: rtl;
        div {
            direction: ltr;
        }
    }
    .middle {
        width: 147px;
        padding: 0;
        overflow: visible;
        position: relative;
        top: -7px;
        z-index: 1;
    }
    .right {
        flex: 45;
        background: rgba(#eee, 0.25);
        z-index: 2;
    }
    .content {
        position: absolute;
        left: 45px;
        top: 0;
        white-space: pre;
    }
    .linenos {
        position: absolute;
        left: 0;
        top: 0;
        width: 45px;
        white-space: nowrap;
        text-align: center;
        line-height: 16px;
    }
    .hljs {
        padding: 1px;
    }
    .marker {
        position: absolute;
        top: 0;
        left: 0;
        overflow: visible;
        opacity: 0.4;
        z-index: 2;
        pointer-events: none;
    }
    .marker.add path {
        fill: rgb(138, 229, 93);
    }
    .marker.remove path {
        fill: #F76A51;
    }
    .marker.modify path {
        fill: #F5F05D;
    }
}

.diff-progress {
    float: left;
    width: 20%;
    margin: 5px;
}

.fade.ng-enter {
    transition: opacity 0.15s;
    opacity: 0;
}

.fade.ng-enter.ng-enter-active {
    opacity: 1;
}

.fade.ng-enter.ng-enter-active {
    opacity: 1;
}

.fade.ng-leave {
    transition: opacity 0.15s;
    opacity: 1;
}

.fade.ng-leave.ng-leave-active {
    opacity: 0;
}

cr-files .modal-dialog {
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    margin: 0;
}

cr-file-size {
    float: right;
}


[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
.ng-cloak, .x-ng-cloak,
.ng-hide:not(.ng-hide-animate) {
  display: none !important;
}

ng\:form {
  display: block;
}

.ng-animate-shim {
  visibility:hidden;
}

.ng-anchor {
  position:absolute;
}

